--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ember-export-application-global": "1.0.3",
     "ember-feature-flags": "2.0",
     "ember-inline-svg": "0.1.4",
+    "ember-resolver": "^2.0.3",
     "ember-validations": "mutewinter/ember-validations#3f54ba27d4",
     "express": "^4.13.3",
     "glob": "^4.5.3",
